--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
-FROM_ADDRESS=xxx
-FROM_SEED=xxx
-TO_ADDRESS=xxx
+CHAIN=hardhat # mainnet, hardhat
+
+EVM_ADDRESS=xxx # 查看地址
+FROM_EVM_ADDRESS=xxx
+FROM_EVM_SK=xxx
+TO_EVM_ADDRESS=xxx
+AMOUNT=xxx
+
+FROM_XRP_ADDRESS=xxx
+FROM_XRP_SEED=xxx
+TO_XRP_ADDRESS=xxx
