--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^6.13.4",
     "hdkey": "^2.1.0",
     "tiny-secp256k1": "^2.2.3",
+    "viem": "^2.22.9",
     "xrpl": "^4.1.0"
   },
   "devDependencies": {
