--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@ethereumjs/util": "^9.1.0",
+    "axios": "^1.9.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.7",
     "dotenv": "^16.4.7",
